[tool.poetry]
name = "quiz"
version = "0.1.0"
description = ""
authors = ["Lucas Silva <lucasdevsurubim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.1"
blue = "^0.9.1"
pytest = "^7.1.3"
isort = "^5.10.1"
prospector = "^1.7.7"
pip-audit = "^2.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
